<resources>
    <string name="app_name">Pulso</string>
    <string name="greeting_title">Hola, Alex</string>
    <string name="greeting_subtitle">¿Cómo te sientes hoy?</string>
    <string name="avatar_description">Avatar de Alex</string>
    <string name="notifications_description">Notificaciones</string>
    <string name="no_notifications">No tienes notificaciones nuevas</string>
    <string name="dialog_ok">Entendido</string>

    <string name="hero_card_title">Tu salud, a tu ritmo</string>
    <string name="hero_card_description">Encuentra un momento para cuidarte</string>
    <string name="hero_card_button">Reservar cita</string>

    <string name="section_services">Servicios</string>
    <string name="service_general">General</string>
    <string name="service_cardio">Cardiología</string>
    <string name="service_dental">Odontología</string>
    <string name="service_lab">Analíticas</string>

    <string name="section_next_appointment">Próximas citas</string>
    <string name="section_see_all">Ver todo</string>
    <string name="appointment_doctor">Dr. Alejandro Silva</string>
    <string name="appointment_specialty">Cardiología preventiva</string>
    <string name="appointment_date">Jueves, 15 Oct • 10:30 AM</string>
    <string name="appointment_doctor_photo">Foto del Dr. Alejandro Silva</string>
    <string name="appointment_more_options">Más opciones de la cita</string>
    <string name="appointment_view_details">Ver detalles</string>
    <string name="appointment_details_title">Detalles de la cita</string>
    <string name="appointment_details_development">La vista de detalles está en desarrollo.</string>
    <string name="booking_demo_title">Reservar cita · Simulación</string>
    <string name="booking_general">Consulta general</string>
    <string name="booking_specialist">Especialista</string>
    <string name="booking_cancel">Cancelar</string>
    <string name="booking_confirmation_title">Simulación completada</string>
    <string name="booking_confirmation_message">Has elegido: %1$s. Esta es una simulación; no se ha reservado ninguna cita real.</string>
    <string-array name="booking_options">
        <item>@string/booking_general</item>
        <item>@string/booking_specialist</item>
    </string-array>
</resources>
